<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
                android:padding="16dp"
             android:layout_height="match_parent"
             tools:context=".lastmatch.LastMatchFragment">

    <android.support.v4.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/referesh">

        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/list_view"/>

        <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/progressBar"/>
    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>